RESOLVED FIXED 95263
ondisplay event handlers are not called
https://bugs.webkit.org/show_bug.cgi?id=95263
Summary ondisplay event handlers are not called
Jon Lee
Reported 2012-08-28 16:40:05 PDT
When a notification is shown by the platform, the onshow event handler (which is the standard event) gets called, but not the ondisplay event handler (which is the legacy event). The proper fix here, probably, would be to conflate the two, rather than treating the two separately.
Attachments
Patch (4.26 KB, patch)
2012-08-31 13:55 PDT, Jon Lee
ap: review+
Radar WebKit Bug Importer
Comment 1 2012-08-28 16:40:20 PDT
Jon Lee
Comment 2 2012-08-31 13:55:25 PDT
Jon Lee
Comment 3 2012-08-31 14:26:17 PDT
Csaba Osztrogonác
Comment 4 2012-09-01 00:37:22 PDT
(In reply to comment #3) > Committed r127321: <http://trac.webkit.org/changeset/127321> It broke 3 tests on Qt. Could you check it, please? Here is the bug report: https://bugs.webkit.org/show_bug.cgi?id=95638
Note You need to log in before you can comment on or make changes to this bug.